src/main/resources/md/css/layouts/blog.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

a {
    text-decoration: none;
    color: rgb(61, 146, 201);
}
a:hover,
a:focus {
    text-decoration: underline;
}

h3 {
    font-weight: 100;
}

/* LAYOUT CSS */
.pure-img-responsive {
    max-width: 100%;
    height: auto;
}

#layout {
    padding: 0;
}

.header {
    text-align: left;
    top: auto;
    padding-left: 90px;
}

.sidebar {
    background: #f0f0f0;
    color: #292929;
    min-width: 350px;
}

.brand-title {
   color: #ff3c51;
   font-size: 31px;
   font-family: 'PT Sans', Helvetica, Arial, sans-serif;
   margin-bottom: 1px;
}

.nav-list {
    margin: 0;
    padding: 0;
    list-style: none;
}
.nav-item {
    display: inline-block;
    *display: inline;
    zoom: 1;
}
.nav-item a {
    background: transparent;
    border: 2px solid rgb(176, 202, 219);
    color: #fff;
    margin-top: 1em;
    letter-spacing: 0.05em;
    text-transform: uppercase;
    font-size: 85%;
    color: #000000;
}
.nav-item a:hover,
.nav-item a:focus {
    border: 2px solid rgb(61, 146, 201);
    text-decoration: none;
}

.content-subhead {
    text-transform: uppercase;
    color: #aaa;
    border-bottom: 1px solid #eee;
    padding: 0.4em 0;
    font-size: 80%;
    font-weight: 500;
    letter-spacing: 0.1em;
}

.content {
    padding: 2em 1em 0;
}

.post {
    padding-bottom: 2em;
}
.post-title {
    font-size: 2em;
    color: #222;
    margin-bottom: 0.2em;
}
.post-avatar {
    border-radius: 50px;
    float: right;
    margin-left: 1em;
}
.post-description {
    font-family: Georgia, "Cambria", serif;
    color: #444;
    line-height: 1.8em;
}
.post-meta {
    color: #999;
    font-size: 90%;
    margin: 0;
}

.post-category {
    margin: 0 0.1em;
    padding: 0.3em 1em;
    color: #fff;
    background: #999;
    font-size: 80%;
}
    .post-category-design {
        background: #5aba59;
    }
    .post-category-pure {
        background: #4d85d1;
    }
    .post-category-yui {
        background: #8156a7;
    }
    .post-category-js {
        background: #df2d4f;
    }

.post-images {
    margin: 1em 0;
}
.post-image-meta {
    margin-top: -3.5em;
    margin-left: 1em;
    color: #fff;
    text-shadow: 0 1px 1px #333;
}

.post-list {
    padding-left: inherit;
}

.post-date {
    font-size: 10pt;
    color: #aaa;
    margin-top: 5px;
}

.footer {
    text-align: center;
    padding: 1em 0;
}
.footer a {
    color: #ccc;
    font-size: 80%;
}
.footer .pure-menu a:hover,
.footer .pure-menu a:focus {
    background: none;
}

@media (min-width: 48em) {
    .content {
        padding: 2em 3em 0;
        margin-left: 25%;
    }

    .header {
        text-align: left;
    }

    .sidebar {
        position: fixed;
        top: 0;
        bottom: 0;
    }
}
.custom-restricted-width {
     /* To limit the menu width to the content of the menu: */
     display: inline-block;
     /* Or set the width explicitly: */
     /* width: 10em; */
     text-align: left;

     /*
     border: 2px solid rgb(96, 118, 130);
     border-radius: 4px;
     */

     padding-bottom: 20px;
     padding-left: 0px;
     padding-right: 18px;
     padding-top: 12px;
}

.toc ul {
    list-style-type: disc;
}

.toc a {
    color: #000000;
    font-family: 'PT Sans', Helvetica, Arial, sans-serif;
    font-size: 18px;
}

.audio-panel {
   width: 70%;
}

.logo-box {
   background: url('../../img/logo.png') no-repeat center center;
   width: 100%;
   height: 214px;
   margin-top: 25px;
}

.more-link {
  color: #ff5265;
  letter-spacing: 1.1px;
  font-size: 16px;
  display: block;
  margin-top: 35px;
}

.post-title {
  margin-top: 50px;
}

.pub-date {
  color: #939292;
  font-size: 16px;
}

a.prev-page {
  color: #ff5265;
  position: absolute;
  right: 0;
}

a.next-page {
  color: #ff5265;
  position: absolute;
  left: 0;
}

.pagination {
  position: relative;
  margin-top: 25px;
  margin-left: 10px;
  margin-right: 10px;
}

